--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,8 @@
   
   <form action="#" method="post"> 
     <label>name</label>
-    <input type="text" name="full_name" placeholder="full name">
+    <input type="text" name="full_name" placeholder="full name" required>
+    
   </form>
     
 </body>
