Automatically backed up by Learn

--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
   
   <form action="#" method="post"> 
     <label>name</label>
-    <input type="text" name="full_name" placeholder="full name" required>
+    <input type="text" id="full_name" name="full_name" placeholder="full name" required>
     
   </form>
     
