--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m13!1m11!1m3!1d12027.49619237108!2d-110.95542799339457!3d32.232703064639956!2m2!1f0!2f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sus!4v1561226462669!5m2!1sen!2sus" width="425" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
   
   <form action="#" method="post"> 
-    <label> for name</label>
+    <label> for="full_name"name</label>
     <input type="text" id="full_name" name="full_name" placeholder="full name" required>
     
   </form>
