--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,10 @@
   <form action="#" method="post"> 
     <label for="full_name"> Name</label>
     <input type="text" id="full_name" name="full_name" placeholder="full name" required>
-    
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="your email" required>
+    <label for="phone">Phone</label>
+    <input type="tel"
   </form>
     
 </body>
