--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,8 @@
     <input type="email" id="email" name="email" placeholder="your email" required>
     <label for="phone">Phone</label>
     <input type="tel" id="Phone" name="Phone" placeholder="your phone (optional)">
+    <label for="message">Message</label>
+    <textarea id="message">Message</textarea>
   </form>
     
 </body>
