--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <label for="phone">Phone</label>
     <input type="tel" id="Phone" name="Phone" placeholder="your phone (optional)">
     <label for="message">Message</label>
-    <textarea id="message">Message</textarea>
+    <textarea id="message" name="message" rows="10"</textarea>
   </form>
     
 </body>
