Automatically backed up by Learn

--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
     <input type="tel" id="Phone" name="Phone" placeholder="your phone (optional)">
     <label for="message">Message</label>
     <textarea id="message" name="message" rows="10"></textarea>
+    <input type="submit"
   </form>
     
 </body>
