--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
   <video controls>
     <source src="video location" type="video/mp4">
+    <source src="video location" type="video/ogg">
   </video>
   </body>
 </html>
