Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <video controls>
     <source src="video location" type="video/mp4">
     <source src="video location" type="video/ogg">
-    Your browser does not support this video type
+    Your browser does not support this video type :(
   </video>
   </body>
 </html>
