--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <video controls>
     <source src="video location" type="video/mp4">
     <source src="video location" type="video/ogg">
-    Your browser does not support this video type :( <a href=https://www.google.com/chrome/"
+    Your browser does not support this video type :( <a href="https://www.google.com/chrome/" target="_blank">Please upgrade your browser</a>
   </video>
   </body>
 </html>
