Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       <source src="video location" type="video/ogg">
       Your browser does not support this video type :( <a href="https://www.google.com/chrome/" target="_blank">Please upgrade your browser</a>
     </video>
-    </section>  
+    </section>
+    
+    <footer>
+      &copy; 2019 Exceptional Realty. All Rights Reserved. 
+    </footer>
   </body>
 </html>
