--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     </header>
     
     <section id="featured_property">
-      <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
-  
+      <figure>
+        <img src="images/intro-pic.jpg" alt="A beautiful living room." title="Welcome to Exceptional Realty Group">
+        <figcaption>Apartment location</figcaption>
+      </figure>
       <!--
       foldername/ = go inside the folder.
       filename = use a file in the current folder.
