Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
     </section>
     
     <section id="promotional">
-    <video controls>
-      <source src="video location" type="video/mp4">
-      <source src="video location" type="video/ogg">
-      Your browser does not support this video type :( <a href="https://www.google.com/chrome/" target="_blank">Please upgrade your browser</a>
-    </video>
+      <figure>  
+        <video controls>
+        <source src="video location" type="video/mp4">
+        <source src="video location" type="video/ogg">
+        Your browser does not support this video type :( <a href="https://www.google.com/chrome/" target="_blank">Please upgrade your browser</a>
+        <figcaption>Promo video</figcaption>
+        </video>
     </section>
     
     <footer>
