--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
         <source src="video location" type="video/mp4">
         <source src="video location" type="video/ogg">
         Your browser does not support this video type :( <a href="https://www.google.com/chrome/" target="_blank">Please upgrade your browser</a>
-        <figcaption>Promo video</figcaption>
         </video>
+        <figcaption>Promo video</figcaption>
+      </figure>
     </section>
     
     <footer>
